 * mid3iconv:
   * Accurately copy QL-style frame encoding behavior. (#75)
   * Skip unopenable files. (#79)
 * ID3FileType:
   * Remember which tag type load() was called with even if the file
     doesn't yet have any ID3 tags. (#89)
 * VComment: Prevent MemoryError when parsing invalid header (#112)
 * ASF: Don't corrupt files on the second save() call (#81, Christoph Reiter)

1.20 - 2010.08.04
 * ASF: Don't store blocks over 64K in the MetadataObject block;
   use the MetadataLibraryBlock instead. (#60, Lukáš Lalinský)
 * ID3: Faster parsing of files with lots of padding. (#65, Christoph Reiter)
 * FLAC: Correct check for audio data start. (#67)

1.19 - 2010.02.18
 * ID3:
   * POPM: 'count' is optional; the attribute may not exist. (#33)
   * TimeStampTextFrame: Fix a TypeError in unicode comparisons. (#43)
   * MakeID3v1: Translate TYER into ID3v1 year if TDRC is not present. (#42)
 * mid3v2:
   * Allow --delete followed by --frame, and --genre 1 --genre 2. (#37)
   * Add --quiet and --verbose flags. (#40)
 * moggsplit: --m3u option to write an M3U playlist of the new files. (#39)
 * mid3iconv: Fix crash when processing TCML or TIPL frames. (#41)
 * VCommentDict: Correctly normalize key names for .keys() iterator. (#45)
 * MP3: Correct length calculation for MPEG-2 files. (#46)
 * oggflac: Fix typo in docstring. (#53)
 * EasyID3: Force UTF-8 encoding. (#54)
 * EasyMP4: Fix 'genre' translation. (#56)

1.18 - 2009.10.22
 * ASF:
   * Distinguish between empty and absent tag values in
     ContentDescriptionObjects. (#29)
 * mid3iconv:
   * Fix a crash when processing empty (invalid) text frames.
 * MAJOR API INCOMPATIBILITY!!!!
   * EasyID3FileType is now in mutagen.easyid3, not mutagen.id3. This
     change was necessary to restore API compatibility with 1.16, as
     1.17 accidentally contained a circular import preventing
     mutagen.easyid3 from importing by itself. (#32)

1.17 - 2009.10.07
 * ID3: 