@@ -24,6 +24,7 @@
      doesn't yet have any ID3 tags. (#89)
  * VComment: Prevent MemoryError when parsing invalid header (#112)
  * ASF: Don't corrupt files on the second save() call (#81, Christoph Reiter)
+ * OggTheora: Fix length/bitrate calculation. (#99, Christoph Reiter)
 
 1.20 - 2010.08.04
  * ASF: Don't store blocks over 64K in the MetadataObject block;
